Fix resource table dropdown overflow

--- a/packages/studio/src/pages/apps/app/resources/resource/IndexPage/index.module.css
+++ b/packages/studio/src/pages/apps/app/resources/resource/IndexPage/index.module.css
@@ -14,7 +14,3 @@
   grid-template-columns: 1fr 1fr;
   row-gap: 1rem;
 }
-
-.table {
-  height: 100%;
-}
